--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,19 @@
     tools:context="com.creativejones.andre.musicmachine.MainActivity">
 
     <Button
+        android:id="@+id/downloadBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Download"
-        android:id="@+id/downloadBtn"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:text="Download"/>
+
+    <Button
+        android:id="@+id/playButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/downloadBtn"
+        android:layout_centerHorizontal="true"
+        android:text="Play"/>
+
 </RelativeLayout>
